<resources>
    <string name="app_name">iChat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_enter_email">Enter email</string>
    <string name="txt_enter_password">Enter Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_login_here">Login here</string>
    <string name="txt_pleas_enter_email">Please enter email</string>
    <string name="txt_please_enter_password">Please enter password</string>
    <string name="txt_not_a_member_text"><![CDATA[Not a member. <font color=\'#FFFFFF\'><b><u>Sign up</u></b></font>]]></string>
    <string name="txt_not_a_valid_email">Not a valid email</string>
    <string name="txt_register_here">Register here</string>
    <string name="txt_register">Register</string>
    <string name="txt_please_enter_your_name">Please enter your name</string>
    <string name="txt_already_a_member_text"><![CDATA[Already a member. <font color=\'#FFFFFF\'><b><u>Login</u></b></font>]]></string>
    <string name="txt_enter_name">Enter your name</string>
    <string name="txt_register_successfully">Register Successfully</string>
    <string name="txt_success">Success</string>
    <string name="txt_invalid_credentials">Invalid Credentials</string>
    <string name="txt_calls">Calls</string>
    <string name="txt_chats">Chats</string>
    <string name="txt_contacts">Contacts</string>
    <string name="txt_gallery">Gallery</string>
    <string name="txt_camera">Camera</string>
    <string name="txt_cancel">Cancel</string>

</resources>
