<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:gravity="center_horizontal"
            android:text="@string/txt_login_here"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dp_30" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_80"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutTheme">

                <EditText
                    android:id="@+id/et_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_enter_email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/dp_6"
                    android:paddingTop="@dimen/dp_6"
                    android:textColor="@color/colorIcons" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:theme="@style/TextInputLayoutTheme">

                <EditText
                    android:id="@+id/et_email_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_enter_password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/dp_6"
                    android:paddingTop="@dimen/dp_6"
                    android:textColor="@color/colorIcons" />

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.CardView
                android:id="@+id/cv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_20"
                app:cardCornerRadius="@dimen/dp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    android:text="@string/txt_login"
                    android:textAllCaps="false" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_not_member_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

</RelativeLayout>