<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:gravity="center_horizontal"
                android:text="@string/txt_register_here"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_30" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_40"
                android:background="@drawable/rounded_corners"
                android:orientation="vertical"
                android:padding="@dimen/dp_20">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle_image_view_profile"
                    android:layout_width="@dimen/dp_140"
                    android:layout_height="@dimen/dp_140"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_app_icon_round" />


                <ImageView
                    android:id="@+id/iv_upload_profile_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/edit_profile" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:theme="@style/TextInputLayoutTheme">

                    <EditText
                        android:id="@+id/et_name_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_enter_name"
                        android:inputType="textCapWords"
                        android:paddingBottom="@dimen/dp_6"
                        android:paddingTop="@dimen/dp_6"
                        android:textColor="@color/colorIcons" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:theme="@style/TextInputLayoutTheme">

                    <EditText
                        android:id="@+id/et_email_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_enter_email"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="@dimen/dp_6"
                        android:paddingTop="@dimen/dp_6"
                        android:textColor="@color/colorIcons" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:theme="@style/TextInputLayoutTheme">

                    <EditText
                        android:id="@+id/et_password_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_enter_password"
                        android:inputType="textPassword"
                        android:paddingBottom="@dimen/dp_6"
                        android:paddingTop="@dimen/dp_6"
                        android:textColor="@color/colorIcons" />

                </android.support.design.widget.TextInputLayout>


                <android.support.v7.widget.CardView
                    android:id="@+id/cv_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_20"
                    app:cardCornerRadius="@dimen/dp_10">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="@dimen/dp_10"
                        android:text="@string/txt_register"
                        android:textAllCaps="false" />
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_already_a_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="Signup"
                android:padding="@dimen/dp_20"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>